--- a/RandomForest/pom.xml
+++ b/RandomForest/pom.xml
@@ -5,17 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.unice.polytech.invitee</groupId>
-    <artifactId>RFFeeder</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>randomforest</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>../RandomForest</module>
-    </modules>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
 
     <build>
         <plugins>
@@ -26,9 +18,35 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>fr.unice.polytech.invitee.randomforest.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>com.github.sanity</groupId>
+            <artifactId>quickml</artifactId>
+            <version>0.10.15</version>
+        </dependency>
+
+
+    </dependencies>
 
 </project>
