--- a/RandomForest/pom.xml
+++ b/RandomForest/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>randomforest</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <build>
         <plugins>
             <plugin>
@@ -18,11 +17,11 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-
                 </configuration>
             </plugin>
 
             <plugin>
+                <!-- create jar: 'mvn clean compile assembly:single' -->
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -45,8 +44,5 @@
             <artifactId>quickml</artifactId>
             <version>0.10.15</version>
         </dependency>
-
-
     </dependencies>
-
 </project>
