--- a/feeder/pom.xml
+++ b/feeder/pom.xml
@@ -5,9 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.unice.polytech.invitee</groupId>
-    <artifactId>randomforest</artifactId>
+    <artifactId>feeder</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <repositories>
         <repository>
@@ -35,7 +38,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fr.unice.polytech.invitee.randomforest.Main</mainClass>
+                            <mainClass>fr.unice.polytech.invitee.feeder.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
